W7-8Notes/Kubernetes/Blue-Green/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: php-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Exact
            path: /
            backend:
              service:
                name: php-service-1
                port:
                  number: 80
